NOTE: HUGE performance boosts in this commit!  See below... gateone.js:  Wrapped the logic that writes the scrollback buffer to localStorage in a 2-second timeout that gets reset every time there's a screen update.  This is to improve performance (so we won't be writing ~500 lines of terminal output to disk every nth of a second). gateone.js:  Fixed a bug where the scrollback buffer was being erased when the page was reloaded (I believe this was only happening in Firefox). gateone.js:  Made it so that when you press Ctrl-l it forces a full screen update (regardless of what the underlying terminal program does with that keystroke). gateone.js:  Gate One is now using "use strict;". gateone.js:  Removed the polyfills at the top of the script.  They are unnecessary as all the browsers that support WebSockets also happen to support Array.prototype.indexOf and Array.prototype.forEach(). gateone.js:  Lots of little changes here and there to prevent trivial/transient/harmless exceptions from winding up in the JS console (so users don't think Gate One is broken =). gateone.py:  Instituted a timeout into the logic that sends screen updates to the client.  This makes Gate One a lot more responsive when dealing with really fast screen updates (e.g. typing super fast, holding down a key, moving the cursor, etc).  So instead of having the web server send a zillion screen updates/sec to the client (which causes the browser to slow to a crawl and CPU utilization to jump to 100%) it will only send the last screen update that occurred when the output stopped for 50 milliseconds.  It also forces a screen update to be sent every 150ms regardless of the incoming screen updates.  The result is pretty impressive:  Try opening a big file with vim and then hold down an arrow key to navigate.  *MUCH* faster than before! termio.py:  Fixed the screen difference logic so that now it only sends a diff to the client every time instead of every other time =D. Bookmarks plugin:  Started porting fea

--- a/gateone/templates/themes/black.css
+++ b/gateone/templates/themes/black.css
@@ -255,6 +255,8 @@
     z-index: 500;
     margin: 0;
     opacity: 0;
+    width: 95%;
+    height: 95%;
 }
 /* This is to work around a Chrome/Windows bug where pasting gets disabled if you use JS to set display: none */
 .go_none { /* No prefix on this one because of issues with that in the JS code */
